@@ -1,5 +1,9 @@
 2011-05-20  Jason Merrill  <jason@redhat.com>
 
+	PR c++/48736
+	* pt.c (tsubst_copy_and_build): Handle substitution of a pack
+	expansion producing another expansion.
+
 	PR c++/48873
 	* tree.c (stabilize_expr): Don't make gratuitous copies of classes.
 
